2010-04-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Move cached "now time" into `struct behavior'.

	* base.h (behavior): Add member `now'.
	* rcsutil.c (now): Cache now time in `BE (now)'.

2010-04-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use `SHARED' space for `system' command construction.

	* rcsutil.c [!HAVE_WORKING_FORK] (bufargcat): Delete func.
	[!HAVE_WORKING_FORK] (accumulate_arg_quoted): New static func.
	(runv) [!HAVE_WORKING_FORK]: Use `SHARED'
	space to construct string for `system' call.

2010-04-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Move cached username into `struct behavior'.

	* base.h (behavior): Add member `username'.
	* rcsutil.c (getusername): Cache username in `BE (username)'.

2010-04-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Move remaining edit state into `struct editstuff'.

	* base.h (behavior): Add member `editstuff'.
	* rcsedit.c: #include "b-divvy.h".
	(editstuff): New struct.
	(fedit, editname, editline, linecorr, sff)
	(line, gap, gapsize, linelim): Delete vars.
	(EDIT): New macro.
	(lockname, newRCSname): Update.
	(ensure_editstuff): New static func.
	(insertline, deletelines, snapshotedit, finishedit, swapeditfiles)
	(copylines, editstring, keepdirtemp, dirtempunlink):
	Use `EDIT (foo)' instead of deletes vars.
	(copystring, enterstring, rcswriteopen, makedirtemp): Likewise.
	Also, call `ensure_editstuff'.

2010-04-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstractions: SHARED, SINGLE

	* b-divvy.h (SHARED, SINGLE): New #define:s.
	* b-isr.c: Do s/shared/SHARED/g; do s/single/SINGLE/g.
	* co.c: Likewise.
	* merger.c: Likewise.
	* rcsclean.c: Likewise.
	* rcsdiff.c: Likewise.
	* rcsfnms.c: Likewise.
	* rcsgen.c: Likewise.
	* rcskeep.c: Likewise.
	* rcslex.c: Likewise.
	* rcsutil.c: Likewise.

2010-04-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Make `putdesc' reentrant.

	* rcsgen.c: #include "b-divvy.h".
	(putdesc): Take pointer to `struct cbuf', save description text