@@ -331,10 +331,9 @@ runv (int infd, char const *outname, char const **args)
   int wstatus;
 
 #if BAD_WAIT_IF_SIGCHLD_IGNORED
-  static bool fixed_SIGCHLD;
-  if (!fixed_SIGCHLD)
+  if (!BE (fixed_SIGCHLD))
     {
-      fixed_SIGCHLD = true;
+      BE (fixed_SIGCHLD) = true;
 #ifndef SIGCHLD
 #define SIGCHLD SIGCLD
 #endif
